--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Layout from '../layouts/Layout.astro';
         <a href="#contact" class="btn btn-primary btn-large">Book My Session</a>
       </div>
       <div class="hero-image">
-        <img src="/images/hero-image.png" alt="Online Therapy" class="hero-img" width="500" height="500" fetchpriority="high" />
+        <img src="/images/hero-image.png" alt="Online Therapy" class="hero-img" width="500" height="500" fetchpriority="high" decoding="async" />
       </div>
     </div>
   </section>
